# sphinx-gallery

./: .git-blame-ignore-revs  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  RELEASES.md  appveyor.yml  azure-pipelines.yml  changes.rst  circle.yml  dev-requirements.txt  docs_deploy.sh  pyproject.toml  readme.md  release_steps.org  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: artifact_path  build_docs_mne.sh  build_docs_skl.sh  config.yml  docs_deploy.sh  setup_bash.sh  sg_dev_check.sh
.github/: dependabot.yml  install.sh  pr-labeler.yml
.github/workflows/: automerge.yml  circle_artifacts.yml  label-check.yml  main.yml  mergify.yml  pr_labeler.yml  release.yml  tests.yml
continuous_integration/: install.sh  test_script.sh
continuous_integration/azure/: after_success.sh  install.sh  test_script.sh
continuous_integration/travis/: install.sh  test_script.sh
doc/: Makefile  advanced.rst  advanced_configuration.rst  advanced_index.rst  changes.rst  conf.py  configuration.rst  contribute.rst  developers.rst  doc-requirements.txt  faq.rst  galleries.rst  getting_started.rst  index.rst  maintainers.rst  make.bat  projects_list.rst  reference.rst  related_projects.rst  requirements.txt  syntax.rst  usage.rst  utils.rst
doc/_static/: hide_links.css  switcher.json  theme_override.css
doc/_templates/: breadcrumbs.html  layout.html  module.rst
doc/binder/: requirements.txt
doc/sphinxext/: gen_rst.py  sg_doc_build.py
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat
docs/_templates/: layout.html
examples/: GALLERY_HEADER.rst  README.txt  grow.py  just_code.py  local_module.py  plot_0_sin.py  plot_10_expected_errors.py  plot_1_exp.py  plot_2_seaborn.py  plot_3_capture_repr.py  plot_4_choose_thumbnail.py  plot_4b_provide_thumbnail.py  plot_5_unicode_everywhere.py  plot_6_function_identifier.py  plot_7_sys_argv.py  plot_8_animations.py  plot_9_multi_image_separate.py  plot_9_plotly.py  plot_bokeh.py  plot_capture_repr.py  plot_choose-thumbnail.py  plot_choose_thumbnail.py  plot_colors.py  plot_exp.py  plot_function_counter.py  plot_function_identifier.py  plot_gallery_version.py  plot_gif.py  plot_grow.py  plot_ipyvolume_scatter.py  plot_notebook.py  plot_pandas_df.py  plot_plotly.py  plot_plotly_3d.py  plot_quantum.py  plot_raise.py  plot_seaborn.py  plot_seaborn_import_1.py  plot_seaborn_import_2.py  plot_sin.py  (+7 more)
examples/advanced/: README.txt
examples/no_output/: README.txt  just_code.py  plot_raise.py  plot_raise_thumbnail.py  plot_strings.py  plot_syntaxerror.py
examples/sin_func/: README.txt  plot_notebook.ipynb  plot_sin.py  plot_sin_black_background.py
examples_old/: plot_0_sin.py
examples_old/no_output/: plot_strings.py
hybrid/: plot_1_exp.py
hybridmodels/: README.txt
mayavi_examples/: README.rst  README.txt  plot_3d.py
plotly_examples/: GALLERY_HEADER.rst  README.rst  plot_0_plotly.py
pyvista_examples/: README.rst  plot_collisions.py  plot_glyphs.py  plot_lighting.py  plot_ray_trace.py
sphinx_gallery/: __init__.py  _testing.py  backreferences.py  binder.py  block_parser.py  clean.py  conftest.py  cxx_source_parser.py  dir_rst.py  directives.py  docs_resolv.py  downloads.py  execute_blocks.py  executenb.py  gen_gallery.py  gen_rst.py  interactive_example.py  jupyterlite.py  load_style.py  lua_source_parser.py  notebook.py  py_source_parser.py  recommender.py  rst_source_parser.py  save_images.py  scrapers.py  sorting.py  source_parser.py  sphinx_compatibility.py  typing.py  utils.py  write_rst.py
sphinx_gallery/_static/: gallery.css  gallery.scss  sg-tags.js  sg_gallery.css
sphinx_gallery/components/: sg_download_links.html  sg_launcher_links.html
sphinx_gallery/tests/: conftest.py  reference_parse.txt  test_backreferences.py  test_binder.py  test_block_parser.py  test_docs_resolv.py  test_executenb.py  test_execution_times.py  test_full.py  test_full_noexec.py  test_gen_gallery.py  test_gen_rst.py  test_interactive_example.py  test_load_style.py  test_notebook.py  test_py_source_parser.py  test_recommender.py  test_scrapers.py  test_sorting.py  test_sphinx_compatibility.py  test_utils.py  test_write_rst.py  unicode.sample
sphinx_gallery/tests/testconfs/: conf.py
sphinx_gallery/tests/testconfs/src/: plot_1.py  plot_2.py  plot_3.py
sphinx_gallery/tests/tinybuild/: Makefile  conf.py  index.rst  utils.py
sphinx_gallery/tests/tinybuild/_templates/: module.rst
sphinx_gallery/tests/tinybuild/doc/: Makefile  conf.py  index.rst  minigallery.rst
sphinx_gallery/tests/tinybuild/examples/: __init__.py  isentropic.m  julia_sample.jl  local_module.py  parse_this.cpp  plot_animation.py  plot_command_line_args.py  plot_future_imports.py  plot_future_imports_broken.py  plot_future_statements.py  plot_large_multiimg.py  plot_matplotlib_alt.py  plot_matplotlib_backend.py  plot_mime_bundle.py  plot_multi_image_block_separate.py  plot_multi_image_separate.py.py  plot_numpy_matplotlib.py  plot_numpy_scipy.py  plot_pickle.py  plot_random_jpg.py  plot_random_png.py  plot_repr.py  plot_scraper_broken.py  plot_second_future_imports.py  plot_svg.py  plot_svg_repr.py
sphinx_gallery/tests/tinybuild/examples_README_header/: plot_exp.py
sphinx_gallery/tests/tinybuild/examples_rst_index/: index.rst  plot_examp.py
sphinx_gallery/tests/tinybuild/examples_with_rst/: README.txt  plot_boo.py  plot_cos.py  rst_example1.rst  rst_example2.rst
sphinx_gallery/tests/tinybuild/notebooks/: plot_notebook.ipynb
sphinxgallery/: __init__.py  backreferences.py  docs_resolv.py  gen_gallery.py  gen_rst.py  glr_thumb.py
sphinxgallery/_static/: gallery.css  gallery.scss
sphinxgallery/tests/: reference_parse.txt  test_backreferences.py  test_docs_resolv.py  test_gen_gallery.py  test_gen_rst.py  test_get_rst.py
tutorials/: README.txt  plot_notebook.py  plot_parse.py  plot_parse_cell_seps.py  spherical_grid_interpolation.py
tutorials/seaborn/: README.txt  plot_seaborn_notebook.py
(+7 files in other folders)
