[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
name = "sphinx-gallery"
description = "A Sphinx extension that builds an HTML gallery of examples from any set of Python scripts."
readme = "README.rst"
license = {"text" = '3-clause BSD'}
authors = [
   {name = "Óscar Nájera", email = 'najera.oscar@gmail.com'},
]
requires-python = '>=3.8'
classifiers = [
  'Development Status :: 4 - Beta',
  'Framework :: Sphinx :: Extension',
  'Intended Audience :: Developers',
  'Programming Language :: Python',
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "pillow",
  "sphinx>=4",
]
[project.optional-dependencies]
jupyterlite= [
  "jupyterlite_sphinx",
]
recommender = [
  "numpy",
]
show_api_usage= [
  "graphviz",
]
show_memory= [
  "memory_profiler",
]
[project.urls]
Documentation = "https://sphinx-gallery.github.io"
Source = "https://github.com/sphinx-gallery/sphinx-gallery"
[project.scripts]
sphinx_gallery_py2jupyter = "sphinx_gallery.notebook:python_to_jupyter_cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "sphinx_gallery.__version__"}

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["sphinx_gallery*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
lint.select = ["E", "F", "W", "D"]
exclude = ["__init__.py"]
lint.ignore = [
    # TODO: A lot of these we should actually fix eventually
    "D105", # Missing docstring in magic method
    "D401", # First line of docstring should be in imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"sphinx_gallery/tests/*.py" = [
    "E501", # line too long
    "D103", # Missing docstring in public function
]
"examples/no_output/plot_syntaxerror.py" = [
    "E999", # SyntaxError
]
"tutorials/plot_parse.py" = [
    "D202", # [*] No blank lines allowed after function docstring (found 1)
    "D209", # Multi-line docstring closing quotes should be on a separate line
]
# Example files cannot satisfy below rules due to header and imports in code blocks
"*examples*/*.py" = [
    "D400", # First line should end with a period
    "E402", # Module level import not at top of file
    "D205", # 1 blank line required between summary line and description
]
"tutorials/*.py" = [
    "D400", # First line should end with a period
    "E402", # Module level import not at top of file
    "D205", # 1 blank line required between summary line and description
]
"bin/*.py" = [
    "D400", # First line should end with a period
    "D205", # 1 blank line required between summary line and description
]
"sphinx_gallery/tests/testconfs/src/*.py" = [
    "D400", # First line should end with a period
    "D205", # 1 blank line required between summary line and description
]

[tool.codespell]
builtin = "clear,rare,informal,names,usage"
ignore-words = "ignore_words.txt"

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--cov-report=",
    "--cov=sphinx_gallery",
    "--durations=5",
    "-r a",
    "--tb=short",
    "--junit-xml=junit-results.xml",
]
python_files = "tests/*.py"
norecursedirs = "build _build auto_examples gen_modules sphinx_gallery/tests/tinybuild"
filterwarnings = [
    "ignore:.*HasTraits.trait_.*:DeprecationWarning",
    "ignore:.*importing the ABCs.*:DeprecationWarning",
    "ignore:np.loads is deprecated, use pickle.loads instead:DeprecationWarning",
    "ignore:'U' mode is deprecated:DeprecationWarning",
    "ignore:node class .* is already registered.*:",
    "ignore:node.Node.* is obsoleted by Node.*:",
]
junit_family = "xunit2"
markers = [
    "conf_file: Configuration file."
]
